# libgit2

./: CMakeLists.txt  update_from_upstream.sh
include/git2/: clone.h  transport.h
include/git2/sys/: commit.h  config.h  diff.h  filter.h  odb_backend.h  refdb_backend.h  reflog.h  refs.h
src/: attr.c  attr_file.c  attr_file.h  blame.c  blame.h  blob.c  blob.h  branch.c  buffer.c  buffer.h  cache.c  cache.h  checkout.c  checkout.h  clone.c  commit.c  commit.h  commit_list.h  common.h  config.c  config.h  config_cache.c  config_file.c  config_file.h  crlf.c  delta-apply.c  diff.h  diff_driver.c  diff_file.c  diff_patch.c  diff_patch.h  diff_print.c  diff_tform.c  fetch.c  fetchhead.c  filebuf.h  filter.c  filter.h  global.c  graph.c  (+72 more)
src/hash/: hash_generic.c  hash_generic.h  hash_openssl.h  hash_win32.c  hash_win32.h
src/transports/: cred.c  cred_helpers.c  git.c  http.c  local.c  smart.c  smart.h  smart_pkt.c  smart_protocol.c  ssh.c  winhttp.c
src/unix/: map.c  realpath.c
src/win32/: dir.c  dir.h  error.c  findfile.c  map.c  posix.h  posix_w32.c  precompiled.h  utf-conv.c  utf-conv.h
tests/config/: lock.c  write.c
